Added function to fetch posts.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
     "bx-stable-infinite-scroll": "^1.1.2",
     "dayjs": "^1.10.7",
     "lodash": "^4.17.21",
