--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "react-star-rating-component": "^1.4.1",
-    "swiper": "^7.3.3",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
